manuscript v1.4.3 (merged and glued all-bird and guild-level sections)

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -65,61 +65,48 @@ At the next level of response, we investigated whether foraging guilds differed 
 
 A total of 7,367 detections of 69 bird species were made, of which 62% (4527) did not meet the criteria for inclusion in the analysis. Of the 2,840 detections of 45 species anlaysed, 78% (2,209) were purely auditory, 7% (201) were purely visual and 15% (430) were both, and this did not change majorly with weeks or across points (Figure S3). The average number of detections per point count varied from 5 in Week 1 to 9 in Week 13 (Figure 2). Among 494 records of birds foraging, just two were of frugivory. 
  
-## Habitat selection in forest birds
-
-The final model was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser (Table 2). It contained total bird abundance as response, and crossed random effects of sampling point and day. The predictors selected as important were observer (detections had 71:29 observer ratio), week, canopy heterogeneity, tree density, and dominant ground vegetation and its interaction with week. In spite of the significant correlations between canopy heterogeneity and canopy cover (r = -0.533, p = 0.0017), and between canopy cover and tree density (r = 0.526, p = 0.002), canopy heterogeneity and tree density remained uncorrelated (r = -0.246, p = 0.1745). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (r = -0.545, p = 0.0013), but seemed to be the more important predictor in the models.
+The final model at the level of all birds was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser (Table 2). It contained total bird abundance as response, and crossed random effects of sampling point and day. The predictors selected as important were observer (detections had 71:29 observer ratio), week, canopy heterogeneity, tree density, and dominant ground vegetation and its interaction with week. In spite of the significant correlations between canopy heterogeneity and canopy cover (r = -0.533, p = 0.0017), and between canopy cover and tree density (r = 0.526, p = 0.002), canopy heterogeneity and tree density remained uncorrelated (r = -0.246, p = 0.1745). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (r = -0.545, p = 0.0013), but seemed to be the more important predictor in the models.
 
 There was an overall increase in bird abundance towards the end of the study period in all sampling points---across the five categories of ground vegetation---but the magnitude of increase was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation had intermediate values of both average abundance and increase in abundance with time. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with ground layers comprising moss and bare ground (category ‘Bare’) both had low abundances in the beginning but towards the end had the highest abundances, i.e., they showed the strongest increases. Bird abundance related positively and negatively with log-transformed variables of canopy heterogeneity and tree density respectively (Figure 3) and these trends did not change noticeably over the course of the study period. 
 
-## Habitat selection in forest bird guilds
-
-Habitat selection was very different in invertebrate-feeders and in omnivores (Table 3). The final model in the former case was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, with no main effect or interaction term of week. Point ID was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; such sampling points tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
+Splitting this overall pattern guild-wise, habitat selection was very different between invertebrate-feeders and omnivores (Table 3). The final model for invertebrate-feeders was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, with no main effect or interaction term of week. Point ID was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; these sampling points tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
 
 For omnivores, the final model was a negative binomial GLMM (log link) also containing just one random effect, of point. Observer, week, habitat class, tree density and canopy heterogeneity along with its interaction with week were all important and contributed to model parsimony. Omnivore abundance also increased as the season progressed, but overall abundance was higher in forest edges than in forest interiors or roadside patches (Figure 5). This trend did not interact with week. Omnivore abundance decreased with tree density but showed interesting trends with canopy heterogeneity. Initially, the trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong: omnivores seemed to be very abundant in highly heterogenous points, while abundances did not change over the weeks in relatively homogenous points (Figure 5). 
 
 # Discussion
 
-While our observations corroborated the general understanding that birds are more quiet, inconspicuous and inactive during the post-breeding period, detectability was not as low as expected. The general increase in bird 'abundance' seen with the progress of the season could have been due to migrants arriving from the north to winter here, such as multiple tit species, but also due to better detection rates as the birds became bolder and more active, especially with the formation of large (and sometimes mixed) foraging flocks.
+While our observations corroborated the general understanding that birds are more quiet, inconspicuous and inactive during the post-breeding period, detectability was not as low as expected. The general increase in bird 'abundance' seen with the progress of the season could have been due to migrants arriving from the north to winter here, such as multiple tit species, but also due to better detection rates as the birds became bolder and more active, especially with the formation of large (and sometimes mixed) foraging flocks. The very low number of instances of birds feeding on fruits was unexpected but solidifies the distinction between Central European and North American forests. Either arthropod abundance in the forest was still high enough to support the birds, or the birds in this region---mostly non-migrants or partial migrants---simply do not shift their foraging strategy, unlike birds elsewhere (see Parrish, 1997, 2000), and rather only feed on fruits facultatively.
 
-The very low number of instances of birds feeding on fruits was unexpected but solidifies the distinction between Central European and North American forests. Either arthropod abundance in the forest was still high enough to support the birds, or the birds in this region---mostly non-migrants or partial migrants---simply do not shift their foraging strategy, unlike birds elsewhere (see Parrish, 1997, 2000), and rather only feed on fruits facultatively.
+We used a continuous measure of time (and seasonality) rather than categorical factors like ‘post-breeding period’ and ‘pre-migratory period’, for better comparability. Firstly, there is high ambiguity and arbitrariness in the literature regarding exact definitions of these seasons. Moreover, such categories would have very different meanings and implications depending on location. For instance, ‘pre-migratory periods’ in the northernmost parts of Scandinavia would be extremely different from those in, say, southern Czech Republic. Instead, measuring in numbers of weeks identified by a standard time unit (the Gregorian calendar) allows easy interpretation of results. Finally, such a measurement of time provides a much finer temporal resolution, which could be important in spotting patterns developing at a relatively short time scale. That said, other factors affecting comparability such as choice of bird survey method and habitat variables persist in our study.
 
-We used a continuous measure of time (and seasonality) rather than categorical factors like ‘post-breeding period’ and ‘pre-migratory period’, for better comparability. Firstly, there is high ambiguity and arbitrariness in the literature regarding exact definitions of such seasons. Moreover, such categories would have very different meanings and implications depending on location. For instance, ‘pre-migratory periods’ in the northernmost parts of Scandinavia would be extremely different from those in, say, southern Czech Republic. Instead, measuring in numbers of weeks identified by a standard time unit (the Gregorian calendar) allows easy interpretation of results. Finally, such a measurement of time provides a much finer temporal resolution, which could be important in spotting patterns developing at a relatively short time scale. That said, other factors affecting comparability such as choice of bird survey method and habitat variables persist in our study.
+In our study, the common plant species in the understorey were *F. alnus* and *P. abies*, followed by *Q. robur/petraea* and *B. pendula*. Other species occurred rarely and even when they did, were sparse, isolated and in very few numbers. Hence, although the presence of shrubs in the understorey is generally expected to be good for small passerines, the absence of a trend in bird abundance with understorey characteristics such as richness and diversity, might be due to these factors being captured with an insufficient range in my study area so as to matter for the birds. Therefore, different patterns could be expected in other less-managed and naturally more diverse forests.
 
-## Habitat selection in forest birds
+The overall abundance of forest birds after the breeding season seemed to be higher in patches where the canopy was highly heterogeneous and lower in forest patches with uniform canopy cover. As invertebrate-feeders did not show any particular relationship with heterogeneity, the trend is probably driven by omnivores. In the beginning, like invertebrate-feeders, there was no major trend in omnivore abundance with canopy heterogeneity although the birds seemingly preferred less heterogeneous points. However, this was completely reversed by the end of the study, with the most heterogeneous points having the highest abundance---twice that of the least heterogeneous points which did not see any change in bird abundance at all over the course of the season. The arrival of migrants caused an occupation of the previously ‘empty’ niche and this was most likely because heterogeneity enables the formation of large foraging flocks, with different individuals in the party focused on different aspects of the habitat. 
 
-The overall abundance of forest birds after the breeding season seemed to be higher in forest patches where the canopy was highly heterogeneous and lower in forest patches with uniform canopy cover. There was also a negative trend with tree density despite the two habitat variables not being significantly correlated. Since a vast majority of bird detections were auditory and since such temperate forests with poor understorey layers do not limit auditory detections, the possibility of poorer detection rates with higher tree density can be ruled out, although it is unknown whether tree density also affects overall bird behaviour. Although the presence of shrubs in the understorey is generally expected to be good for small passerines, in our study, the common species in the understorey were *F. alnus* and *P. abies*, followed by *Q. robur/petraea* and *B. pendula*. Other species occurred rarely and even when they did, were sparse, isolated and in very few numbers. This likely explains the absence of a trend in bird abundance with understorey characteristics such as richness and diversity, which might not be captured with a wide enough range in my study area so as to matter for the birds. Hence, different patterns could be expected in other less-managed and naturally more diverse forests.
+Heterogeneity has been explored before in habitat selection studies, but the focus has mostly been on the habitat and not the canopy. For example, Freemark and Merriam (1986) observed positive trends of bird richness and abundance with overall habitat heterogeneity (combination of species compositions and forest structure) and forest size, which are expected to correlate. Canopy heterogeneity however, along with canopy cover, affect light availability within the forest, which would result in higher foraging efficiency and thus can be crucial in foraging for invertebrates in autumn when the conspicuous prey are depleted. Heterogeneity could also explain higher omnivore abundance in forest edges. In our study, across multiple points of the same area within the same forest tract, the relation between omnivore abundance and canopy heterogeneity evolved with time, suggesting that these preferences are driven directly or indirectly by the seasonally changing conditions. *Canopy cover was not included as a candidate predictor and hence its effect cannot be compared*, but heterogeneity might potentially be more important to birds than average cover, as heterogeneous patches provide better light conditions while still retaining some other desirable properties of the habitat. Patches with low cover, despite having good light conditions, might not have sufficiently good vegetation characteristics. This could be indicating two separable properties of the canopy that often go unnoticed. 
 
-Heterogeneity has been explored before in habitat selection studies, but the focus has mostly been on the habitat and not the canopy. For example, Freemark and Merriam (1986) observed positive trends of bird richness and abundance with overall habitat heterogeneity (combination of species compositions and forest structure) and forest size, which are expected to correlate. Canopy heterogeneity however, along with canopy cover, affect light availability within the forest, which can be crucial for invertebrate-feeders, particularly in autumn when the conspicuous prey are depleted. In our study, across multiple points of the same area within the same forest tract, the trends between bird abundance and canopy heterogeneity did not change with time, suggesting that these preferences are driven not by seasonally changing conditions but rather by some fundamental and more general driver. *Canopy cover was not included as a candidate predictor and hence its effect cannot be compared*, but heterogeneity might potentially be more important to birds as heterogeneous patches provide better light conditions while still retaining some other desirable properties of the habitat. Patches with low average cover, despite having good light conditions, might not have sufficiently good vegetation characteristics. This could be indicating two separable properties of the canopy that often go unnoticed. 
+Despite the absence of a significant correlation between canopy heterogeneity and tree density, the latter was negatively related to bird abundance (at the community level as well in omnivores). Since a vast majority of bird detections were auditory and since auditory detections are not limited by such temperate forests with poor understorey layers, the possibility of poorer detection rates with higher tree density can be ruled out, though it is unknown whether density also affects overall bird behaviour. In omnivores, the structural preference (tree density) rather than biological or taxonomical preference (like coniferous/deciduous) suggests that being generalists, they are not particular about the nature of their food source. At the same time, the correlation between canopy cover and tree density, despite being statistically significant, is weak at low densities, suggesting that the preference of birds for low density patches might be driven by some factor other than light availability. For instance, Menon and Shahabuddin (2021) found that tree density across various sites in a low-latitude temperate forest, comprising both protected and managed patches, was highly negatively associated with mean tree girth, and observations suggested a negative relationship with canopy height as well. While these could be due to suppressed regeneration and sapling growth, and therefore indirectly due to light availability (shade effects), both variables were positively linked with bird abundance and richness (Menon and Shahabuddin, 2021). Wider and taller trees are expected to host a larger and more diverse group of arthropod prey species as a result of greater diversity of microhabitats. Wolfe et al. (2014) suggested that because forest-dwelling arthropod species are often cryptic (Bond, 2007), it may be inherently difficult and inefficient for an insectivore to directly assess the availability of arthropods, particularly in resource-scarce periods. They suggested this to be the reason why insectivores, unlike frugivores, tracked structural cues. However, our ‘invertebrate-feeding’ species are naturally specialised on cryptic prey species. This could be why they tracked the qualitative features of the food resources (indirectly by the coniferous/deciduous distinction) over structural characteristics. On the other hand, the generalist omnivores would have had difficulty foraging for these cryptic species, and hence attained higher foraging efficiency by tracking structural characteristics, especially with the formation of foraging flocks.
 
-On the other hand, the correlation between canopy cover and tree density, despite being statistically significant, is weak at low densities, suggesting that the preference of birds for low density patches might be driven by some factor other than light availability. For instance, Menon and Shahabuddin (2021) found that tree density across various sites in a low-latitude temperate forest, comprising both protected and managed patches, was highly negatively associated with mean tree girth, and observations suggested a negative relationship with canopy height as well. While these could be due to suppressed regeneration and sapling growth, and therefore indirectly due to light availability (shade effects), both variables were positively linked with bird abundance and richness (Menon and Shahabuddin, 2021). Wider and taller trees are expected to host a larger and more diverse group of arthropod prey species as a result of greater diversity of microhabitats. 
+Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches (e.g., Alatalo, 1981; Jansson and Andrén, 2003; Hagar, 2007; Ohno and Ishida, 1997; Felton et al., 2010). However, in alignment with Alatalo's findings (1981) that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertebrate-feeder abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera (45% of the total species richness of phytophages on *Q. robur/petraea*; Kennedy and Southwood, 1984), which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June (Feeny, 1970). When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers (Southwood et al., 2004). Moorman et al. (2007) have shown that lepidopterans are less preferred than coleopterans and hymenopterans. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce (firecrest shows no preference for either conifers or broadleaf trees; Leisler and Thaler, 1982). In fact, even omnivores like the great tit have been shown to preferentially feed on conifers like pines (Eeva et al., 1997).
 
-Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches (e.g., Alatalo, 1981; Jansson and Andrén, 2003; Hagar, 2007; Ohno and Ishida, 1997; Felton et al., 2010). However, in alignment with Alatalo's findings (1981) that relative use of such deciduous patches were strong in summer but declined in winter, birds in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees.
+Surprisingly, the dominant ground layer vegetation had a great effect on bird abundances at the community level. Canopy heterogeneity, understorey density and understorey diversity were not particularly different between the different groups of points, and there were only weak patterns with canopy cover, richness and diversity. However, as observed in a central Swedish forest by Berg (1997), the ground vegetation seems to be related to tree species composition. Specifically, there is a complex interplay of conifer presence and tree density. The ‘Moss’ points (two in total), relative to all other points, had the highest tree densities, very low deciduous proportions (lowest oak numbers) and very high spruce numbers (Figure S7; see also Figure S2 A). Some of the ‘Bare’ points (no dominant ground layer vegetation) also had high tree densities and high numbers of spruce, although others had varied characteristics. Bird abundance in both 'Moss' and 'Bare' points was very low in the beginning and very high in the end. Several points other than 'Moss' and 'Bare', including one ‘Graminoid’ point, had relatively low proportions of deciduous trees but these consisted mostly of pine and not spruce. While the relation of different ground layers with pine was similar to that with spruce, it was not as strong. ‘Rubus’ and ‘Vaccinium’ points generally had mixed canopies with high deciduous proportions and low spruce numbers as well as low tree densities ('Rubus' had the lowest). Such points had intermediate values of both average bird abundance and increase in abundance. Finally, while other points had intermediate oak numbers, 'Graminoid' points had the highest (like the 'grass' vegetation in Berg, 1997) and these were also associated with generally low canopy heterogeneity. These points had the lowest average bird abundance as well as its increase. 
 
-*probably continue with omn ins split here*
+Thus, birds early in the season preferred mixed forest patches that had some canopy heterogeneity and low tree densities (which could in turn be related to either tree girth or deciduous proportions), and avoided spruce-dominated points. However, closer to autumn, these points with highly dense canopy structure were increasingly utilised and preferred, and thus had highest bird abundances in the end. All this might be suggesting that although mixed species composition, canopy heterogeneity and low tree density are generally the best features and hence can be considered as generally good for birds (such points had relatively high abundances in the end too), spruce-dominated dense patches represent an initially low-value niche that turns into a high-value niche. While many studies (e.g., Alatalo, 1981) directly compare the impacts of tree density and deciduous proportion as habitat variables, they could have different implications to birds and hence could be selected for differently. At the community level, tree density provides a better fit than proportion of deciduous trees despite their significant correlation, likely due to the variability in values; the same value of tree density can arise in both conifer-dominated and deciduous broadleaf-dominated patches (see Figure S6). Moreover, the overall trend with tree density in the model is negative possibly because the degree of initial avoidance of high-density spruce patches was relatively high while the subsequent preference was not high enough to appear statistically as an interaction of the variable. It became visible, however, when the sampling points were split into groups. Interestingly, the same effect was absent with pine, the other common conifer, which could mean it is less important than spruce in our study area. Berg (1997) similarly observed positive correlations of bird abundance with spruce and none with pine, but this was during the breeding season, when spruce is believed to be preferred over pine due to its special canopy structure that provides protected nest sites, and possibly also due to differences in productivity and food availability. On the other hand, Alatalo (1981) noticed that foliage-gleaners preferred pine over spruce, presumably due to the abundance of eggs of Lachnidae on pine needles, but this was in winter. However, he also suggests that species like firecrest and *Turdus* thrushes forage in pine forests in late summer, despite avoiding it during the nesting season. The fact that the dominant ground vegetation (indirectly linked to qualitative nature of tree species) was not important for omnivores, especially with the arrival of the migrants, further solidifies that omnivores tracked only structural features, and that they were otherwise rather evenly distributed over the study area.
 
-Surprisingly, the dominant ground layer vegetation had a great effect on bird abundances. Canopy heterogeneity, understorey density and understorey diversity were not particularly different between the different groups of points, and there were only weak patterns with canopy cover, richness and diversity. However, as observed in a central Swedish forest by Berg (1997), the ground vegetation seems to be related  to tree species composition. Specifically, there is a complex interplay of conifer presence and tree density. The ‘Moss’ points (two in total), relative to all other points, had the highest tree densities, very low deciduous proportions (lowest oak numbers) and very high spruce numbers (Figure S7; see also Figure S2 A). Some of the ‘Bare’ points (no dominant ground layer vegetation) also had high tree densities and high numbers of spruce, although others had varied characteristics. Bird abundance in both 'Moss' and 'Bare' points was very low in the beginning and very high in the end. Several points other than 'Moss' and 'Bare', including one ‘Graminoid’ point, had relatively low proportions of deciduous trees but these consisted mostly of pine and not spruce. While the relation of different ground layers with pine was similar to that with spruce, it was not as strong. ‘Rubus’ and ‘Vaccinium’ points generally had mixed canopies with high deciduous proportions and low spruce numbers as well as low tree densities ('Rubus' had the lowest). Such points had intermediate values of both average bird abundance and increase in abundance. Finally, while other points had intermediate oak numbers, 'Graminoid' points had the highest (like the 'grass' vegetation in Berg, 1997) and these were also associated with generally low canopy heterogeneity. These points had the lowest average bird abundance as well as its increase. 
 
-Thus, birds early in the season preferred mixed forest patches that had some canopy heterogeneity and low tree densities (which could in turn be related to either tree girth or deciduous proportions), and avoided spruce-dominated points. However, closer to autumn, these points with highly dense canopy structure were increasingly utilised and preferred, and thus had highest bird abundances in the end. All this might be suggesting that although mixed species composition, canopy heterogeneity and low tree density are generally the best features and hence can be considered as generally good for birds (such points had relatively high abundances in the end too), spruce-dominated dense patches represent an initially low-value niche that turns into a high-value niche. While many studies (e.g., Alatalo, 1981) directly compare the impacts of tree density and deciduous proportion as habitat variables, they could have different implications to birds and hence could be selected for differently. In the final model, tree density provides a better fit than proportion of deciduous trees despite their significant correlation, likely due to the variability in values; the same value of tree density can arise in both conifer-dominated and deciduous broadleaf-dominated patches (see Figure S6). Moreover, the overall trend with tree density in the model is negative possibly because the degree of initial avoidance of high-density spruce patches was relatively high while the subsequent preference was not high enough to appear statistically as an interaction of the variable. It became visible, however, when the sampling points were split into groups. 
 
-Interestingly, the same effect was absent with pine, the other common conifer, which could mean it is less important than spruce in our study area. Berg (1997) similarly observed positive correlations of bird abundance with spruce and none with pine, but this was during the breeding season, when spruce is believed to be preferred over pine due to its special canopy structure that provides protected nest sites, and possibly also due to differences in productivity and food availability. On the other hand, Alatalo (1981) noticed that foliage-gleaners preferred pine over spruce, presumably due to the abundance of eggs of Lachnidae on pine needles, but this was in winter. However, he also suggests that species like firecrest and *Turdus* thrushes forage in pine forests in late summer, despite avoiding it during the nesting season.
 
-Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study being poorest for birds in both periods can perhaps be better understood at a deeper level of response, i.e., at the level of guilds.
-
-## Habitat selection in forest bird guilds
-
-The two guilds showing different patterns is indirect evidence of differences in their resource-use strategies. Further, while abundance of omnivores increased with time, that of invertebrate-feeders remained largely constant. This agrees with the fact that most of the northern migrants that arrive here are omnivores (mostly tits), also suggesting that detectability of the naturally quiet invertebrate-feeders was not a major issue in this study. 
-
-Abundance of invertebrate-feeders decreased linearly with proportion of deciduous trees and was lower in graminoid-dominated points. Thus, surprisingly, they were clearly avoiding oak-dominated patches with low canopy heterogeneity, while their preferences were mostly similar among the other points regardless of whether they were spruce-dominated or mixed forest patches. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera (45% of the total species richness of phytophages on *Q. robur/petraea*; Kennedy and Southwood, 1984), which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June (Feeny, 1970). When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers (Southwood et al., 2004). Moorman et al. (2007) have shown that lepidopterans are less preferred than coleopterans and hymenopterans. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/common firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce (firecrest shows no preference for either conifers or broadleaf trees; Leisler and Thaler, 1982). In fact, even omnivores like the great tit have been shown to preferentially feed on conifers like pines (Eeva et al., 1997).
-
-The model for omnivores had a negative binomial distribution, corroborating the presence of large foraging flocks seen among omnivore species such as tits. Abundance increased with time, likely due to the migrants, but average abundance was highest in forest edges. Abundance decreased with tree density and there was no relationship with the dominant ground layer vegetation. Their structural preference (tree density) rather than biological or taxonomical preference (like coniferous/deciduous) suggests that being generalists, they are not particular about the nature of their food source. In the beginning, like invertebrate-feeders, there was no major trend in omnivore abundance with canopy heterogeneity although the birds seemed to prefer less heterogeneous points. However, this was completely reversed by the end of the study, with the most heterogeneous points having the highest abundance---twice that of the least heterogeneous points which did not see any change in bird abundance at all over the course of the season. The arrival of migrants caused an occupation of the previously ‘empty’ niche and this was most likely because heterogeneity enables the formation of large foraging flocks, with different individuals in the party focussed on different aspects of the habitat. This, in combination with higher light availability, would result in higher foraging efficiency, which is crucial in the pre-migratory period. Heterogeneity could also explain higher abundance in forest edges. The fact that the dominant ground vegetation was not important, especially with the arrival of the migrants, further solidifies that omnivores tracked only structural features, and that they were otherwise rather evenly distributed over the study area.
-
-Wolfe et al. (2014) suggested that because forest-dwelling arthropod species are often cryptic (Bond, 2007), it may be inherently difficult and inefficient for an insectivore to directly assess the availability of arthropods, particularly in resource-scarce periods. They suggested this to be the reason why insectivores, unlike frugivores, tracked structural cues. However, our ‘invertebrate-feeding’ species are naturally specialised on cryptic prey species. This could be why they tracked the qualitative features of the food resources (indirectly by the coniferous/deciduous distinction) over structural characteristics. On the other hand, the generalist omnivores would have had difficulty foraging for these cryptic species, and hence attained higher foraging efficiency by tracking structural characteristics, especially with the formation of foraging flocks.
 
  Alatalo (1981) found evidence for the prevalence of interspecific competition in the seasonal environment of Finland
 
 
 
 ## Summary and implications
+
+The two guilds showing different patterns is indirect evidence of differences in their resource-use strategies. Further, while abundance of omnivores increased with time, that of invertebrate-feeders remained largely constant. This agrees with the fact that most of the northern migrants that arrive here are omnivores (mostly tits), also suggesting that detectability of the naturally quiet invertebrate-feeders was not a major issue in this study. 
+
+The model for omnivores had a negative binomial distribution, corroborating the presence of large foraging flocks seen among omnivore species such as tits. Abundance increased with time, likely due to the migrants. 
+
 
 The general increase in bird abundance as the season progressed was likely not due to better detection rates but rather because of the arrival of migrants from the north, although trapping and tracking of individual birds is necessary to be absolutely certain of this. The general effects of canopy cover can be separated into those of heterogeneity—which might affect birds through light conditions—and those of absolute densities—which might indirectly affect or might be linked with other aspects of the habitat such as tree girth. 
 
@@ -137,7 +124,7 @@ The measure of canopy heterogeneity used in this study, although interesting, ca
 
 Conducting similar studies in different, and possibly larger, forest tracts will be crucial in understanding the generality of these observed patterns and in determining the level of plasticity and adaptability that bird species are capable of. Sampling points should be chosen so as to obtain equal numbers in each category of predictors such as habitat class and dominant ground vegetation. Additionally, having continuous data starting from the pre-breeding period will be extremely useful, as it can serve as a reference but can also potentially show larger patterns.
 
-# Conclusion
+## Conclusion
 
 Invertebrate-feeding birds only cared about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest and preferred spruce patches with heterogeneity. On the other hand, omnivores were affected by a larger interplay of factors and their patterns changed with time (with the arrival of migrants): they had a slight preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed.
 
