--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -79,56 +79,31 @@ While our observations corroborated the general understanding that birds are mor
 
 We used a continuous measure of time (and seasonality) rather than categorical factors like ‘post-breeding period’ and ‘pre-migratory period’, for better comparability. Firstly, there is high ambiguity and arbitrariness in the literature regarding exact definitions of these seasons. Moreover, such categories would have very different meanings and implications depending on location. For instance, ‘pre-migratory periods’ in the northernmost parts of Scandinavia would be extremely different from those in, say, southern Czech Republic. Instead, measuring in numbers of weeks identified by a standard time unit (the Gregorian calendar) allows easy interpretation of results. Finally, such a measurement of time provides a much finer temporal resolution, which could be important in spotting patterns developing at a relatively short time scale. That said, other factors affecting comparability such as choice of bird survey method and habitat variables persist in our study.
 
-In our study, the common plant species in the understorey were *F. alnus* and *P. abies*, followed by *Q. robur/petraea* and *B. pendula*. Other species occurred rarely and even when they did, were sparse, isolated and in very few numbers. Hence, although the presence of shrubs in the understorey is generally expected to be good for small passerines, the absence of a trend in bird abundance with understorey characteristics such as richness and diversity, might be due to these factors being captured with an insufficient range in my study area so as to matter for the birds. Therefore, different patterns could be expected in other less-managed and naturally more diverse forests.
+The common understorey plant species in our forest were *F. alnus* and *P. abies*, followed by *Q. robur/petraea* and *B. pendula*. Other species occurred rarely and even when they did, were sparse, isolated and in very few numbers. Hence, although the presence of shrubs in the understorey is generally expected to be good for small passerines, the absence of a trend in bird abundance with understorey characteristics such as richness and diversity might be due to these factors being captured with a range not sufficient to matter for the birds. Therefore, different patterns could be expected in other less-managed and naturally more diverse forests.
 
-The overall abundance of forest birds after the breeding season seemed to be higher in patches where the canopy was highly heterogeneous and lower in forest patches with uniform canopy cover. As invertebrate-feeders did not show any particular relationship with heterogeneity, the trend is probably driven by omnivores. In the beginning, like invertebrate-feeders, there was no major trend in omnivore abundance with canopy heterogeneity although the birds seemingly preferred less heterogeneous points. However, this was completely reversed by the end of the study, with the most heterogeneous points having the highest abundance---twice that of the least heterogeneous points which did not see any change in bird abundance at all over the course of the season. The arrival of migrants caused an occupation of the previously ‘empty’ niche and this was most likely because heterogeneity enables the formation of large foraging flocks, with different individuals in the party focused on different aspects of the habitat. 
+The overall abundance of the forest bird community after the breeding season seemed to be higher in patches where the canopy was highly heterogeneous. As invertebrate-feeders did not show any particular relationship with heterogeneity, the trend is probably driven by omnivores. In the beginning, omnivore abundance too was not related to canopy heterogeneity, but this was completely reversed by the end of the study, with the most heterogeneous points having the highest abundance---twice that of the least heterogeneous points which did not see any change in bird abundance at all over the course of the season. The arrival of migrants caused an occupation of the previously ‘empty’ niche and this was most likely because heterogeneity enables the formation of large foraging flocks, with different individuals in the party focused on different aspects of the habitat. 
 
 Heterogeneity has been explored before in habitat selection studies, but the focus has mostly been on the habitat and not the canopy. For example, Freemark and Merriam (1986) observed positive trends of bird richness and abundance with overall habitat heterogeneity (combination of species compositions and forest structure) and forest size, which are expected to correlate. Canopy heterogeneity however, along with canopy cover, affect light availability within the forest, which would result in higher foraging efficiency and thus can be crucial in foraging for invertebrates in autumn when the conspicuous prey are depleted. Heterogeneity could also explain higher omnivore abundance in forest edges. In our study, across multiple points of the same area within the same forest tract, the relation between omnivore abundance and canopy heterogeneity evolved with time, suggesting that these preferences are driven directly or indirectly by the seasonally changing conditions. *Canopy cover was not included as a candidate predictor and hence its effect cannot be compared*, but heterogeneity might potentially be more important to birds than average cover, as heterogeneous patches provide better light conditions while still retaining some other desirable properties of the habitat. Patches with low cover, despite having good light conditions, might not have sufficiently good vegetation characteristics. This could be indicating two separable properties of the canopy that often go unnoticed. 
 
-Despite the absence of a significant correlation between canopy heterogeneity and tree density, the latter was negatively related to bird abundance (at the community level as well in omnivores). Since a vast majority of bird detections were auditory and since auditory detections are not limited by such temperate forests with poor understorey layers, the possibility of poorer detection rates with higher tree density can be ruled out, though it is unknown whether density also affects overall bird behaviour. In omnivores, the structural preference (tree density) rather than biological or taxonomical preference (like coniferous/deciduous) suggests that being generalists, they are not particular about the nature of their food source. At the same time, the correlation between canopy cover and tree density, despite being statistically significant, is weak at low densities, suggesting that the preference of birds for low density patches might be driven by some factor other than light availability. For instance, Menon and Shahabuddin (2021) found that tree density across various sites in a low-latitude temperate forest, comprising both protected and managed patches, was highly negatively associated with mean tree girth, and observations suggested a negative relationship with canopy height as well. While these could be due to suppressed regeneration and sapling growth, and therefore indirectly due to light availability (shade effects), both variables were positively linked with bird abundance and richness (Menon and Shahabuddin, 2021). Wider and taller trees are expected to host a larger and more diverse group of arthropod prey species as a result of greater diversity of microhabitats. Wolfe et al. (2014) suggested that because forest-dwelling arthropod species are often cryptic (Bond, 2007), it may be inherently difficult and inefficient for an insectivore to directly assess the availability of arthropods, particularly in resource-scarce periods. They suggested this to be the reason why insectivores, unlike frugivores, tracked structural cues. However, our ‘invertebrate-feeding’ species are naturally specialised on cryptic prey species. This could be why they tracked the qualitative features of the food resources (indirectly by the coniferous/deciduous distinction) over structural characteristics. On the other hand, the generalist omnivores would have had difficulty foraging for these cryptic species, and hence attained higher foraging efficiency by tracking structural characteristics, especially with the formation of foraging flocks.
+Despite the absence of a significant correlation between canopy heterogeneity and tree density, the latter was negatively related to bird abundance (at the community level as well in omnivores). Since a vast majority of bird detections were auditory and since auditory detections are not limited by such temperate forests with poor understorey layers, the possibility of poorer detection rates with higher tree density can be ruled out, though it is unknown whether density also affects overall bird behaviour. In omnivores, the structural preference rather than biological or taxonomical preference (like coniferous/deciduous) suggests that being generalists, they are not particular about the nature of their food source. At the same time, the correlation between canopy cover and tree density, despite being statistically significant, is weak at low densities, suggesting that the preference of birds for low density patches might be driven by some factor other than light availability. For instance, Menon and Shahabuddin (2021) found that tree density across various sites in a low-latitude temperate forest, comprising both protected and managed patches, was highly negatively associated with mean tree girth, and observations suggested a negative relationship with canopy height as well. While these could be due to suppressed regeneration and sapling growth, and therefore indirectly due to light availability (shade effects), both variables were positively linked with bird abundance and richness (Menon and Shahabuddin, 2021). Wider and taller trees are expected to host a larger and more diverse group of arthropod prey species as a result of greater diversity of microhabitats. Wolfe et al. (2014) suggested that because forest-dwelling arthropod species are often cryptic (Bond, 2007), it may be inherently difficult and inefficient for an insectivore to directly assess the availability of arthropods, particularly in resource-scarce periods. They suggested this to be the reason why insectivores, unlike frugivores, tracked structural cues. However, our ‘invertebrate-feeding’ species are naturally specialised on cryptic prey species. This could be why they tracked the qualitative features of the food resources (indirectly by the coniferous/deciduous distinction) over structural characteristics. On the other hand, the generalist omnivores would have had difficulty foraging for these cryptic species, and hence attained higher foraging efficiency by tracking structural characteristics, especially with the formation of foraging flocks.
 
-Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches (e.g., Alatalo, 1981; Jansson and Andrén, 2003; Hagar, 2007; Ohno and Ishida, 1997; Felton et al., 2010). However, in alignment with Alatalo's findings (1981) that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertebrate-feeder abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera (45% of the total species richness of phytophages on *Q. robur/petraea*; Kennedy and Southwood, 1984), which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June (Feeny, 1970). When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers (Southwood et al., 2004). Moorman et al. (2007) have shown that lepidopterans are less preferred than coleopterans and hymenopterans. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce (firecrest shows no preference for either conifers or broadleaf trees; Leisler and Thaler, 1982). In fact, even omnivores like the great tit have been shown to preferentially feed on conifers like pines (Eeva et al., 1997).
+Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches (e.g., Alatalo, 1981; Jansson and Andrén, 2003; Hagar, 2007; Ohno and Ishida, 1997; Felton et al., 2010). However, in alignment with Alatalo's findings (1981) that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertebrate-feeder abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera (45% of the total species richness of phytophages on *Q. robur/petraea*; Kennedy and Southwood, 1984), which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June (Feeny, 1970). When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers (Southwood et al., 2004). Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. Moorman et al. (2007) have shown that lepidopterans are less preferred than coleopterans and hymenopterans. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertebrate-feeding species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce (firecrest shows no preference for either conifers or broadleaf trees; Leisler and Thaler, 1982). In fact, even omnivores like the great tit have been shown to preferentially feed on conifers like pines (Eeva et al., 1997).
 
 Surprisingly, the dominant ground layer vegetation had a great effect on bird abundances at the community level. Canopy heterogeneity, understorey density and understorey diversity were not particularly different between the different groups of points, and there were only weak patterns with canopy cover, richness and diversity. However, as observed in a central Swedish forest by Berg (1997), the ground vegetation seems to be related to tree species composition. Specifically, there is a complex interplay of conifer presence and tree density. The ‘Moss’ points (two in total), relative to all other points, had the highest tree densities, very low deciduous proportions (lowest oak numbers) and very high spruce numbers (Figure S7; see also Figure S2 A). Some of the ‘Bare’ points (no dominant ground layer vegetation) also had high tree densities and high numbers of spruce, although others had varied characteristics. Bird abundance in both 'Moss' and 'Bare' points was very low in the beginning and very high in the end. Several points other than 'Moss' and 'Bare', including one ‘Graminoid’ point, had relatively low proportions of deciduous trees but these consisted mostly of pine and not spruce. While the relation of different ground layers with pine was similar to that with spruce, it was not as strong. ‘Rubus’ and ‘Vaccinium’ points generally had mixed canopies with high deciduous proportions and low spruce numbers as well as low tree densities ('Rubus' had the lowest). Such points had intermediate values of both average bird abundance and increase in abundance. Finally, while other points had intermediate oak numbers, 'Graminoid' points had the highest (like the 'grass' vegetation in Berg, 1997) and these were also associated with generally low canopy heterogeneity. These points had the lowest average bird abundance as well as its increase. 
 
-Thus, birds early in the season preferred mixed forest patches that had some canopy heterogeneity and low tree densities (which could in turn be related to either tree girth or deciduous proportions), and avoided spruce-dominated points. However, closer to autumn, these points with highly dense canopy structure were increasingly utilised and preferred, and thus had highest bird abundances in the end. All this might be suggesting that although mixed species composition, canopy heterogeneity and low tree density are generally the best features and hence can be considered as generally good for birds (such points had relatively high abundances in the end too), spruce-dominated dense patches represent an initially low-value niche that turns into a high-value niche. While many studies (e.g., Alatalo, 1981) directly compare the impacts of tree density and deciduous proportion as habitat variables, they could have different implications to birds and hence could be selected for differently. At the community level, tree density provides a better fit than proportion of deciduous trees despite their significant correlation, likely due to the variability in values; the same value of tree density can arise in both conifer-dominated and deciduous broadleaf-dominated patches (see Figure S6). Moreover, the overall trend with tree density in the model is negative possibly because the degree of initial avoidance of high-density spruce patches was relatively high while the subsequent preference was not high enough to appear statistically as an interaction of the variable. It became visible, however, when the sampling points were split into groups. Interestingly, the same effect was absent with pine, the other common conifer, which could mean it is less important than spruce in our study area. Berg (1997) similarly observed positive correlations of bird abundance with spruce and none with pine, but this was during the breeding season, when spruce is believed to be preferred over pine due to its special canopy structure that provides protected nest sites, and possibly also due to differences in productivity and food availability. On the other hand, Alatalo (1981) noticed that foliage-gleaners preferred pine over spruce, presumably due to the abundance of eggs of Lachnidae on pine needles, but this was in winter. However, he also suggests that species like firecrest and *Turdus* thrushes forage in pine forests in late summer, despite avoiding it during the nesting season. The fact that the dominant ground vegetation (indirectly linked to qualitative nature of tree species) was not important for omnivores, especially with the arrival of the migrants, further solidifies that omnivores tracked only structural features, and that they were otherwise rather evenly distributed over the study area.
+Thus, birds early in the season preferred mixed forest patches that had some canopy heterogeneity and low tree densities (which could in turn be related to either tree girth or deciduous proportions), and avoided spruce-dominated points. However, closer to autumn, these points with highly dense canopy structure were increasingly utilised and preferred, and had the highest bird abundances in the end. All this might be suggesting that although mixed species composition, canopy heterogeneity and low tree density are generally the best features and hence can be considered as generally good for birds (such points had relatively high abundances in the end too), spruce-dominated dense patches represent an initially low-value niche that turns into a high-value niche. While many studies (e.g., Alatalo, 1981) directly compare the impacts of tree density and deciduous proportion as habitat variables, they could have different implications to birds and hence could be selected for differently. At the community level, tree density provides a better fit than proportion of deciduous trees despite their significant correlation, likely due to the variability in values; the same value of tree density can arise in both conifer-dominated and deciduous broadleaf-dominated patches (see Figure S6). Moreover, the overall trend with tree density in the model is negative possibly because the degree of initial avoidance of high-density spruce patches was relatively high while the subsequent preference was not high enough to appear statistically as an interaction of the variable. It became visible, however, when the sampling points were split into groups based on ground vegetation. Interestingly, the same effect was absent with pine, the other common conifer, which could mean that it is less important than spruce in our study area. Berg (1997) similarly observed positive correlations of bird abundance with spruce and none with pine, but this was during the breeding season when spruce is believed to be preferred over pine due to its special canopy structure that provides protected nest sites, and possibly also due to differences in productivity and food availability. On the other hand, Alatalo (1981) noticed that foliage-gleaners preferred pine over spruce, presumably due to the abundance of eggs of Lachnidae on pine needles, but this was in winter. However, he also suggests that species like firecrest and *Turdus* thrushes forage in pine forests in late summer, despite avoiding it during the nesting season. The fact that the dominant ground vegetation (indirectly linked to qualitative nature of tree species) was not important for omnivores, especially with the arrival of the migrants, further solidifies that omnivores tracked only structural features, and that they were otherwise rather evenly distributed over the study area.
 
+The two guilds showing different patterns is indirect evidence of differences in their resource-use strategies. The general abundance increase in the bird community as the season progressed was likely not due to better detection rates but rather because of the arrival of migrants from the north, although trapping and tracking of individual birds is necessary to confirm this. Further, while abundance of omnivores increased with time, that of invertebrate-feeders remained largely constant. This agrees with the fact that most of the northern migrants that arrive here are omnivores (mostly tits), also suggesting that detectability of the naturally quiet invertebrate-feeders was not a major issue in this study. 
 
+Invertebrate-feeders were selective only about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest, preferring spruce patches with heterogeneity, and were otherwise broad in resource-use. Omnivores, on the other hand, had to adjust and accommodate the new arrivals, and were thus affected by a larger interplay of factors, their patterns changing over time. They did not seem to be specific about food resources directly. Rather, they showed a slight structural preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed. The latter was extremely important in accommodating the northern arrivals and presumably also enabled the large mixed-species foraging flocks. Alatalo (1981) found evidence for the prevalence of interspecific competition in the seasonal environment of Finland. In our case, such competition brought about by migrant arrival was presumably mitigated by the omnivores choosing to form mixed-species flocks. The model for omnivores had a negative binomial distribution, corroborating the presence of such flocks.
 
-
-
- Alatalo (1981) found evidence for the prevalence of interspecific competition in the seasonal environment of Finland
-
-
-
-## Summary and implications
-
-The two guilds showing different patterns is indirect evidence of differences in their resource-use strategies. Further, while abundance of omnivores increased with time, that of invertebrate-feeders remained largely constant. This agrees with the fact that most of the northern migrants that arrive here are omnivores (mostly tits), also suggesting that detectability of the naturally quiet invertebrate-feeders was not a major issue in this study. 
-
-The model for omnivores had a negative binomial distribution, corroborating the presence of large foraging flocks seen among omnivore species such as tits. Abundance increased with time, likely due to the migrants. 
-
-
-The general increase in bird abundance as the season progressed was likely not due to better detection rates but rather because of the arrival of migrants from the north, although trapping and tracking of individual birds is necessary to be absolutely certain of this. The general effects of canopy cover can be separated into those of heterogeneity—which might affect birds through light conditions—and those of absolute densities—which might indirectly affect or might be linked with other aspects of the habitat such as tree girth. 
-
-Further, birds in my study generally did not care about features of the understorey. However, this could be a pattern specific to Branišovský les, and similar studies in other temperate forests of Central Europe are required and encouraged. 
-
-Omnivores had to adjust and accommodate the new arrivals. Invertebrate-feeders were selective only about avoiding homogeneous oak-dominated patches, and were otherwise broad in resource-use. Omnivores, on the other hand, did not seem to be specific about food resources directly, but rather showed structural preferences for forest edges with low tree density and high canopy heterogeneity. The latter was extremely important in accommodating the northern arrivals and presumably also enabled the large mixed-species foraging flocks.
-
-## Caveats and improvements
-
-migratory birds joining resident ones could be responsible for some of the patterns. studies looking at proportion of winter community migrants is useful.
-
-The bird count data had a considerably high observer effect. Although it was statistically accounted for in all the models by inclusion as a fixed effect, it is not easy to predict how exactly it might have affected the observed results. Further similar studies should aim for a study design that does not involve multiple observers (or involves a large number of observers), or if absolutely necessary, should establish more rigorous protocols to avoid biases as much as possible, such as with distance estimation.
-
-The measure of canopy heterogeneity used in this study, although interesting, can be improved. Perhaps five sub-points within the point (or more depending on the radius under consideration), rather than three, can be used so as to get a more accurate measure. Canopy height, stratification and age of forest are variables that could have important effects on the kind of question asked in this study and hence can be incorporated. Multiple studies (e.g., Goetz et al., 2007; Hinsley et al., 2009) have found vertical stratification features of the canopy detected by lidar to be better predictors of bird species richness across multiple habitat types than traditional measures of canopy cover.
-
-Conducting similar studies in different, and possibly larger, forest tracts will be crucial in understanding the generality of these observed patterns and in determining the level of plasticity and adaptability that bird species are capable of. Sampling points should be chosen so as to obtain equal numbers in each category of predictors such as habitat class and dominant ground vegetation. Additionally, having continuous data starting from the pre-breeding period will be extremely useful, as it can serve as a reference but can also potentially show larger patterns.
-
-## Conclusion
-
-Invertebrate-feeding birds only cared about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest and preferred spruce patches with heterogeneity. On the other hand, omnivores were affected by a larger interplay of factors and their patterns changed with time (with the arrival of migrants): they had a slight preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed.
+The measure of canopy heterogeneity used in this study, although interesting, can be improved. Perhaps five sub-points within the point (or more depending on the radius under consideration), rather than three, can be used so as to get a more accurate measure. Canopy height, stratification, tree girth, and age of forest are variables that could have important effects as well and hence can be incorporated. Multiple studies (e.g., Goetz et al., 2007; Hinsley et al., 2009) have found vertical stratification features of the canopy, such as detected by lidar, to be better predictors of bird species richness across multiple habitat types than traditional measures of canopy cover. Although the observer effect in the bird count data was statistically accounted for in all the models by inclusion as a fixed effect, it is not easy to predict how exactly it might have affected the observed results. Hence, future studies should aim for a study design that does not involve multiple observers (or involves a large number of observers), or if absolutely necessary, should establish more rigorous protocols to avoid biases as much as possible, such as with distance estimation. Birds generally did not care about features of the understorey, but this could be a pattern specific to Branišovský les, and similar studies in other, possibly larger and less degraded, temperate forests of Central Europe will be crucial to understanding the generality of these observed patterns and in determining the level of plasticity and adaptability that bird species are capable of. Additionally, it is difficult to ascertain with confidence whether some of the patterns seen in our study are mere artifacts of the newly arriving migrants, or actually represent corresponding changes in resource-use strategy. This highlights the paucity of studies looking at the composition of winter bird communities. Finally, having continuous data starting from the pre-breeding period will be extremely useful, not only as a reference but also potentially helping to show larger patterns.
 
 Thus, the poorly-studied topic of habitat selection in post-breeding temperate forest birds and their corresponding foraging strategies is a very promising avenue to lead future research down. It can lead to valuable insights on the interactions of these birds with their natural environment during stressful periods, and can possibly suggest recommendations on the right action to take in order to make and maintain these heavily managed and exploited habitats suitable to them.
+
+# Abstract 
+
+The general effects of canopy cover can be separated into those of heterogeneity—which might affect birds through light conditions—and those of absolute densities—which might indirectly affect other aspects of the habitat such as tree girth. 
 
 # Tables and figures
 
