--- a/manuscript_supp.Rmd
+++ b/manuscript_supp.Rmd
@@ -2,7 +2,7 @@
 
 Regardless of taxonomic and functional identity, plants of height $\le$ 1 m above the ground classified into the 'Herb' layer (this therefore included both woody- [like Rubus] and non-woody stemmed [like graminoids] plants, but did not exclude graminoid leaves that extended beyond 1 m from the ground); plants 1--4 m in height belonged to the 'Understorey' (this included shrubs like S. aucuparia and F. alnus as well as young individuals of trees like P. abies); and plants $\ge$ 4 m in height belonged to the 'Canopy' (this occasionally included S. aucuparia).
 
-Counts of 'Canopy' and 'Understorey' plants were taken and used to calculate density per 100 m\^2. Counts were not taken for the 'Herb' layer due to the difficulty in some cases in determining what constitutes a single stem and since it is unlikely that birds track ground layer vegetation at the level of individual stems. Instead, the species that covered $\gt$ 50% of the ground was considered to be the 'Dominant Ground Vegetation' (in some cases, this was moss) and this variable was also used in analyses.
+Counts of 'Canopy' and 'Understorey' plants were taken and used to calculate density per 100 m^2^. Counts were not taken for the 'Herb' layer due to the difficulty in some cases in determining what constitutes a single stem and since it is unlikely that birds track ground layer vegetation at the level of individual stems. Instead, the species that covered $\gt$ 50% of the ground was considered to be the 'Dominant Ground Vegetation' (in some cases, this was moss) and this variable was also used in analyses.
 
 # Phenological measurements
 
